# LogService

./: .gitignore  CMakeLists.txt  README.md
include/: Config.h  Data_manager.h  Epoll.h  Http_parser.h  LogFile.h  Log_service.h  MsgQueue.h  MyType.h  Persistence_worker.h  QueryResult.h  RWLock.h  TimerWheel.h  Trie.h  UrlEncode.h  wrap.h
release/: c.sh  d.sh  kill_test.sh  test.sh  test_log.txt
src/: CMakeLists.txt
src/common/: http_parser.cpp  url_encode.cpp
src/log_processor/: LogFile.cpp  MemoryBulkHandler.cpp  Persistence_worker.cpp  data_manager.cpp  log_processor.cpp
src/log_sender/: log_sender.cpp  short_sender.cpp
src/log_server/: log_server.cpp
src/log_service/: log_service.cpp
src/test_log_producer/: main.cpp
